# az-automation-runbook-python-hello-world

./: README.md  azure_automation_runbook.py  mise.toml
hello-world/: README.md  pyproject.toml
hello-world/src/hello_world/: __init__.py
